--- a/src/css/App.css
+++ b/src/css/App.css
@@ -11,3 +11,263 @@
     background-color: #E0C9AF;
     color: #2E2834;
 }
+
+#container>h1 {
+    width: 100%;
+    position: absolute; top: 12vh;
+    font-size: 3vh;
+    font-family: 'Lora';
+    color: #E0C9AF;
+    line-height: 6vh;
+    text-align: center;
+    font-weight: 600;
+    transition: .2s ease-in-out;
+}
+
+#container>#passwordInput {
+    width: 36vh; height: 4vh; background-color: transparent;
+    box-sizing: border-box; border: 0; border-bottom: 2px dotted #E0C9AF;
+    color: #E0C9AF; font-size: 2vh;
+    text-align: center; padding: 0 36px;
+    position: absolute; top: 18vh; left: calc(50% - 36vh/2);
+    transition: .2s ease-in-out;
+}
+
+#container>#passwordInput::selection {
+    background-color: #B07DD6;
+}
+
+#container>#passwordInput:focus {
+    outline: none; border-bottom-style: solid;
+    border-color: #B07DD6; color: #B07DD6;
+}
+
+#container>#passwordInput:focus ~ h1{
+    color: #B07DD6;
+}
+
+#passwordInput:focus ~ #clearInput{
+    color: #B07DD6;
+}
+
+#container>#passwordInput:focus ~ #options .optionButton .optionLabel{
+    color: #B07DD6;
+}
+
+#container>#passwordInput:focus ~ #options .optionButton:hover span{
+    background-color: #E0C9AF;
+}
+
+#container>#passwordInput:focus ~ #options .optionButton input:checked ~ span{
+    background-color: #B07DD6;
+}
+
+#container>#passwordInput:focus ~ #passwordSubmit{
+    border-color: #B07DD6;
+    color: #B07DD6;
+}
+#container>#passwordInput:focus ~ #passwordSubmit .bg1{
+    background-color: #E0C9AF;
+}
+#container>#passwordInput:focus ~ #passwordSubmit .bg2{
+    background-color: #B07DD6;
+}
+#container>#passwordInput:focus ~ #passwordSubmit:active{
+    transition: 0s 0s;
+    border-color: #B07DD6;
+}
+#container>#passwordInput:focus ~ #passwordSubmit:active .bg2{
+    transition: 0s 0s;
+    background-color: #B07DD6;
+}
+#container>#passwordInput:focus ~ #output>h1{
+    color: #B07DD6;
+}
+#container>#passwordInput:focus ~ #copyButton{
+    color: #B07DD6;
+}
+#container>#passwordInput:focus ~ #copyButton:hover .bx-copy{
+    color: #E0C9AF;
+}
+#container>#passwordInput:focus ~ #refreshButton{
+    background-color: #B07DD6;
+}
+#container>#passwordInput:focus ~ #refreshButton:hover{
+    background-color: #E0C9AF;
+}
+
+#container>#clearInput{
+    width: calc(4vh - 2px); height: calc(4vh - 2px); font-size: 2vh;
+    color: #E0C9AF; border: none; cursor: pointer;
+    background: transparent; transition: .2s ease-in-out;
+    position: absolute; top: 18vh; right: calc(50% - 36vh/2);
+}
+
+#container>#clearInput:hover {
+    color: #cf142b;
+}
+
+#container>#options {
+    width: 36vh; height: auto;
+    position: absolute; top: 24vh;
+    left: calc(50% - 36vh/2);
+}
+
+#container #options .optionButton{
+    cursor: pointer; display: block;
+    position: relative; height: 30px;
+}
+
+#container #options .optionButton input{
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+#container #options .optionButton span {
+    position: absolute;
+    top: 0; left: 0;
+    height: 24px; width: 24px;
+    background-color: #564864;
+    transition: .2s ease-in-out;
+}
+
+#container #options .optionButton:hover span{
+    background-color: #B07DD6;
+}
+
+#container #options .optionButton input:checked ~ span{
+    background-color: #E0C9AF;
+}
+
+#container #options .optionButton span:after{
+    content: "";
+    position: absolute;
+    display: none;
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid #2E2834;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+#container #options .optionButton input:checked ~ span:after {
+    display: block;
+}
+
+#container #options .optionButton .optionLabel{
+    font-family: 'Versanity'; color: #E0C9AF; transition: .2s ease-in-out;
+    font-weight: 500; user-select: none; margin-left: 36px; line-height: 24px;
+}
+
+#container #passwordSubmit { 
+    display: flex; justify-content: center; align-items: center;
+    position: absolute; font-size: 1.4vh; user-select: none;
+    color: #E0C9AF; left: calc(50% - 6vh); cursor: pointer; 
+    height: 3.6vh; width: 12vh; border: 2px solid #E0C9AF; box-sizing: border-box;
+    background-color: transparent; top: 36vh;
+    transition: .2s ease-in-out; 
+}
+
+#container #passwordSubmit h1{
+    font-family: 'Versanity';
+    font-weight: 600;
+    transition: .1s ease;
+    position: relative; z-index: 1;
+}
+
+#container #passwordSubmit .bg1{
+    background-color: #B07DD6; position: absolute; top: 0; left: 50%;
+    width: 0; height: 100%; transition: .15s ease-in-out .15s;
+}
+
+#container #passwordSubmit .bg2 {
+    background-color: #E0C9AF; position: absolute; top: 0; left: 50%;
+    width: 0; height: 100%; transition: .15s ease;
+}
+
+#container #passwordSubmit:hover {
+    margin-bottom: -0.4vh;
+    height: 4vh; width: 36vh; top: 35.8vh; left: calc(50% - 36vh/2);
+    transition-duration: .3s;
+}
+
+#container #passwordSubmit:hover h1 {
+    color: #2E2834;
+}
+
+#container #passwordSubmit:hover .bg1{
+    width: 100%;
+    left: 0;
+    transition: .3s 0s;
+}
+#container #passwordSubmit:hover .bg2{
+    width: 100%;
+    left: 0;
+    transition: .3s .3s;
+}
+
+#container #passwordSubmit:active{
+    transition: 0s 0s;
+    border-color: #B07DD6;
+}
+#container #passwordSubmit:active .bg2{
+    transition: 0s 0s;
+    background-color: #B07DD6;
+}
+
+#container>#output>h1 {
+    width: 100%;
+    position: absolute; top: 66vh;
+    font-size: 3vh;
+    font-family: 'Lora';
+    color: #E0C9AF;
+    line-height: 6vh;
+    text-align: center;
+    font-weight: 600;
+    transition: .2s ease-in-out;
+}
+
+#container>#copyButton {
+    width: 4vh; height: 4vh;
+    position: absolute; top: 72vh; left: calc(50% - 4vh/2);
+    font-size: 2vh;
+    color: #E0C9AF;
+    line-height: 6vh;
+    text-align: center;
+    font-weight: 600;
+    transition: .2s ease-in-out;
+    display: flex; align-items: center; justify-content: center;
+}
+
+#container>#copyButton:hover .bx-copy{
+    color: #B07DD6;
+}
+
+#container>#refreshButton {
+    width: 12vh; height: 12vh;
+    position: absolute; bottom: -6vh; left: calc(50% - 12vh/2);
+    font-size: 3vh; border-radius: 6vh 6vh 0 0;
+    color: #2E2834; 
+    background-color: #E0C9AF;
+    line-height: 6vh;
+    text-align: center;
+    font-weight: 600;
+    transition: .2s ease-in-out;
+    display: flex; align-items: start; justify-content: center;
+}
+
+#container>#refreshButton i{
+    transform: translateY(2.4vh);
+}
+
+#container>#refreshButton:hover {
+    padding: 3vh; border-radius: 9vh 9vh 0 0;
+    background-color: #B07DD6;
+    left: calc(50% - 18vh/2); bottom: -9vh;
+}
